--- a/Week11/Animatious/Animatious/Base.lproj/Main.storyboard
+++ b/Week11/Animatious/Animatious/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,75 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Animatious" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2L2-XV-3Dr" userLabel="PlayButton">
+                                <rect key="frame" x="175" y="748.5" width="64" height="63"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="2L2-XV-3Dr" secondAttribute="height" multiplier="1:1" id="cZk-Tz-yVv"/>
+                                    <constraint firstAttribute="height" constant="64" id="ula-fv-nQ9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="44"/>
+                                <color key="tintColor" red="0.34037011740000001" green="0.14033961180000001" blue="0.55927964149999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" backgroundImage="play.circle.fill" catalog="system"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n5c-NM-MJt" userLabel="ColorButton">
+                                <rect key="frame" x="75" y="757" width="44" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="8RV-LH-31O"/>
+                                    <constraint firstAttribute="width" secondItem="n5c-NM-MJt" secondAttribute="height" multiplier="1:1" id="EX4-Aw-u2i"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="44"/>
+                                <color key="tintColor" red="0.34037011740000001" green="0.14033961180000001" blue="0.55927964149999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" backgroundImage="paintbrush.fill" catalog="system"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rOd-Qb-RWS" userLabel="ExpanseButton">
+                                <rect key="frame" x="185" y="668.5" width="44" height="43"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="rOd-Qb-RWS" secondAttribute="height" multiplier="1:1" id="M4b-Nx-LKr"/>
+                                    <constraint firstAttribute="height" constant="44" id="bac-ER-95G"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="44"/>
+                                <color key="tintColor" red="0.34037011740000001" green="0.14033961180000001" blue="0.55927964149999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" backgroundImage="arrow.left.and.right.circle.fill" catalog="system"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ptz-n4-IoJ" userLabel="RotateButton">
+                                <rect key="frame" x="295" y="755.5" width="44" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="TsW-f9-h36"/>
+                                    <constraint firstAttribute="width" secondItem="ptz-n4-IoJ" secondAttribute="height" multiplier="1:1" id="nvz-eV-SkW"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="44"/>
+                                <color key="tintColor" red="0.34037011740000001" green="0.14033961180000001" blue="0.55927964149999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" backgroundImage="rotate.right.fill" catalog="system"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="ptz-n4-IoJ" firstAttribute="centerY" secondItem="2L2-XV-3Dr" secondAttribute="centerY" id="2KG-gT-5n7"/>
+                            <constraint firstItem="rOd-Qb-RWS" firstAttribute="bottom" secondItem="2L2-XV-3Dr" secondAttribute="bottom" constant="-100" id="5X9-Sn-OrX"/>
+                            <constraint firstItem="rOd-Qb-RWS" firstAttribute="centerX" secondItem="2L2-XV-3Dr" secondAttribute="centerX" id="FiA-Ou-LpY"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="2L2-XV-3Dr" secondAttribute="bottom" constant="50" id="Irj-pl-gxZ"/>
+                            <constraint firstItem="ptz-n4-IoJ" firstAttribute="trailing" secondItem="2L2-XV-3Dr" secondAttribute="trailing" constant="100" id="Ixu-Rw-tUE"/>
+                            <constraint firstItem="n5c-NM-MJt" firstAttribute="centerY" secondItem="2L2-XV-3Dr" secondAttribute="centerY" id="XDN-wp-g2L"/>
+                            <constraint firstItem="2L2-XV-3Dr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="v3M-4u-8zW"/>
+                            <constraint firstItem="n5c-NM-MJt" firstAttribute="leading" secondItem="2L2-XV-3Dr" secondAttribute="leading" constant="-100" id="val-LP-mqy"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="139" y="109"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="arrow.left.and.right.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="paintbrush.fill" catalog="system" width="128" height="125"/>
+        <image name="play.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="rotate.right.fill" catalog="system" width="128" height="128"/>
+    </resources>
 </document>
