--- a/Week11/Animatious/Animatious/Base.lproj/Main.storyboard
+++ b/Week11/Animatious/Animatious/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                     <constraint firstAttribute="height" constant="64" id="ula-fv-nQ9"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="44"/>
-                                <color key="tintColor" red="0.34037011740000001" green="0.14033961180000001" blue="0.55927964149999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" red="0.3411764705882353" green="0.14117647058823529" blue="0.5607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" backgroundImage="play.circle.fill" catalog="system"/>
                                 <connections>
                                     <action selector="didTapPlay:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8RH-1B-63s"/>
@@ -37,6 +37,9 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="44"/>
                                 <color key="tintColor" red="0.34037011740000001" green="0.14033961180000001" blue="0.55927964149999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" backgroundImage="paintbrush.fill" catalog="system"/>
+                                <connections>
+                                    <action selector="didTapColorButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bU9-B7-KuB"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rOd-Qb-RWS" userLabel="ExpanseButton">
                                 <rect key="frame" x="185" y="698.5" width="44" height="43"/>
@@ -47,6 +50,9 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="44"/>
                                 <color key="tintColor" red="0.34037011740000001" green="0.14033961180000001" blue="0.55927964149999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" backgroundImage="arrow.left.and.right.circle.fill" catalog="system"/>
+                                <connections>
+                                    <action selector="didTapExpanseButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cdf-aa-pA7"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ptz-n4-IoJ" userLabel="RotateButton">
                                 <rect key="frame" x="295" y="785.5" width="44" height="45"/>
@@ -57,6 +63,9 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="44"/>
                                 <color key="tintColor" red="0.34037011740000001" green="0.14033961180000001" blue="0.55927964149999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" backgroundImage="rotate.right.fill" catalog="system"/>
+                                <connections>
+                                    <action selector="didTapRotateButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KuV-FA-Ljl"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -75,6 +84,7 @@
                     <connections>
                         <outlet property="leftButton" destination="n5c-NM-MJt" id="ksE-cn-mHz"/>
                         <outlet property="leftButtonLeadingConstraint" destination="val-LP-mqy" id="Rj2-KG-MNp"/>
+                        <outlet property="playButton" destination="2L2-XV-3Dr" id="zmL-tl-STd"/>
                         <outlet property="rightButton" destination="ptz-n4-IoJ" id="HCb-iv-zm5"/>
                         <outlet property="rightButtonTrailingConstraint" destination="Ixu-Rw-tUE" id="4Zn-2b-COO"/>
                         <outlet property="topButton" destination="rOd-Qb-RWS" id="bOn-fg-3V9"/>
