--- a/Week11/Animatious/Animatious/Base.lproj/Main.storyboard
+++ b/Week11/Animatious/Animatious/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                             <constraint firstAttribute="width" constant="34" id="i65-hQ-eaF"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="All chosen animations added successfully" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="3Hz-Kc-CSB">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="All chosen animations added successfully" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="3Hz-Kc-CSB">
                                         <rect key="frame" x="50" y="8" width="262" height="64"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
